width of fast facts carousel

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         </div>
 
         <div class="card-deck p-2">
-            <div class="card card-landing-grid">
+            <div class="card card-landing-grid landing-chili">
                 <div class="card-body">
                     <h3 class="text-uppercase">School of Art</h3>
                     <div class="card-text">
@@ -138,7 +138,7 @@
                     <a href="#">How to Apply</a>
                 </div>
             </div>
-            <div class="card card-landing-grid">
+            <div class="card card-landing-grid landing-chili">
                 <div class="card-body">
                     <h3 class="text-uppercase">School of Dance</h3>
                     <div class="card-text">
@@ -219,7 +219,7 @@
         </div>
 
         <!--Fast Facts-->
-        <div class="container mt-2 mb-2">
+        <div class="container-fluid mt-2 mb-2">
             <div class="row no-gutters">
                 <div class="col-12 mt-">
                     <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
