--- a/index.html
+++ b/index.html
@@ -125,7 +125,11 @@
             </div>
         </div>
 
+        <!--School Content and Links-->
+        <!--Row 1-->
         <div class="card-deck p-2">
+
+            <!--Art-->
             <div class="card card-landing-grid landing-chili">
                 <div class="card-body">
                     <h3 class="text-uppercase">School of Art</h3>
@@ -138,6 +142,8 @@
                     <a href="#">How to Apply</a>
                 </div>
             </div>
+
+            <!--Dance-->
             <div class="card card-landing-grid landing-chili">
                 <div class="card-body">
                     <h3 class="text-uppercase">School of Dance</h3>
@@ -151,9 +157,11 @@
                     <a href="#">How to Apply</a>
                 </div>
             </div>
-        </div>
 
+        </div>
+        <!--Row 2-->
         <div class="card-deck p-2">
+            <!--Music-->
             <div class="card card-landing-grid landing-chili">
                 <div class="card-body">
                     <h3 class="text-uppercase">Fred Fox School of Music</h3>
@@ -166,6 +174,7 @@
                     <a href="#">How to Apply</a>
                 </div>
             </div>
+            <!--Theatre, Film & Television-->
             <div class="card card-landing-grid landing-chili">
                 <div class="card-body">
                     <h3 class="text-uppercase">School of Theatre, Film & Television</h3>
@@ -179,10 +188,10 @@
                     <a href="#">How to Apply</a>
                 </div>
             </div>
+
         </div>
 
-
-        <!--Left Nav-->
+        <!--Quick Links-->
         <div class="container">
             <div class="row no-gutters mt-0">
                 <div class="col-12">
@@ -206,6 +215,7 @@
             </div>
         </div>
 
+        <!--News Feed & Events Calendar-->
         <div class="container-fluid">
             <div class="row no-gutters">
                 <div class="col-6 no-gutters border">
@@ -224,120 +234,151 @@
                 <div class="col-12 mt-">
                     <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner">
+
                             <!--Block 1-->
                             <div class="carousel-item active">
                                 <div class="row">
-                                    <!--Content Section A-->
+                                    <!--Content Section 1A-->
                                     <div class="card card-borderless col-4">
                                         <div class="card-body">
-                                            <h5 class="card-title">Card title</h5>
-                                            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                                            <p class="card-text">Some quick example text to build on the card title and
-                                                make up the bulk of the card's content.</p>
-                                            <a href="#" class="card-link">Card link</a>
-                                            <a href="#" class="card-link">Another link</a>
+                                            <!--Callout-->
+                                            <h1 class="card-title text-red text-center">Callout</h1>
+                                            <!--Headline-->
+                                            <h3 class="card-subtitle mb-2 text-muted text-azurite text-center">Headline</h3>
+                                            <hr />
+                                            <!--Source-->
+                                            <p class="card-text font-italic text-black text-center">Source</p>
+                                            <!--Division-->
+                                            <p class="card-text font-italic text-red text-center">Division</p>
                                         </div>
                                     </div>
-                                    <!--Content Section B-->
+                                    <!--Content Section 1B-->
                                     <div class="card card-borderless col-4">
                                         <div class="card-body">
-                                            <h5 class="card-title">Card title</h5>
-                                            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                                            <p class="card-text">Some quick example text to build on the card title and
-                                                make up the bulk of the card's content.</p>
-                                            <a href="#" class="card-link">Card link</a>
-                                            <a href="#" class="card-link">Another link</a>
+                                            <!--Callout-->
+                                            <h1 class="card-title text-red text-center">Callout</h1>
+                                            <!--Headline-->
+                                            <h3 class="card-subtitle mb-2 text-muted text-azurite text-center">Headline</h3>
+                                            <hr />
+                                            <!--Source-->
+                                            <p class="card-text font-italic text-black text-center">Source</p>
+                                            <!--Division-->
+                                            <p class="card-text font-italic text-red text-center">Division</p>
                                         </div>
                                     </div>
-                                    <!--Content Section C-->
+                                    <!--Content Section 1C-->
                                     <div class="card card-borderless col-4">
                                         <div class="card-body">
-                                            <h5 class="card-title">Card title</h5>
-                                            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                                            <p class="card-text">Some quick example text to build on the card title and
-                                                make up the bulk of the card's content.</p>
-                                            <a href="#" class="card-link">Card link</a>
-                                            <a href="#" class="card-link">Another link</a>
+                                            <!--Callout-->
+                                            <h1 class="card-title text-red text-center">Callout</h1>
+                                            <!--Headline-->
+                                            <h3 class="card-subtitle mb-2 text-muted text-azurite text-center">Headline</h3>
+                                            <hr />
+                                            <!--Source-->
+                                            <p class="card-text font-italic text-black text-center">Source</p>
+                                            <!--Division-->
+                                            <p class="card-text font-italic text-red text-center">Division</p>
                                         </div>
                                     </div>
                                 </div>
                             </div>
+
                             <!--Block 2-->
                             <div class="carousel-item">
                                 <div class="row">
-                                    <!--Content Section A-->
+                                    <!--Content Section 2A-->
                                     <div class="card card-borderless col-4">
                                         <div class="card-body">
-                                            <h5 class="card-title">Card title</h5>
-                                            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                                            <p class="card-text">Some quick example text to build on the card title and
-                                                make up the bulk of the card's content.</p>
-                                            <a href="#" class="card-link">Card link</a>
-                                            <a href="#" class="card-link">Another link</a>
+                                            <!--Callout-->
+                                            <h1 class="card-title text-red text-center">Callout</h1>
+                                            <!--Headline-->
+                                            <h3 class="card-subtitle mb-2 text-muted text-azurite text-center">Headline</h3>
+                                            <hr />
+                                            <!--Source-->
+                                            <p class="card-text font-italic text-black text-center">Source</p>
+                                            <!--Division-->
+                                            <p class="card-text font-italic text-red text-center">Division</p>
                                         </div>
                                     </div>
-                                    <!--Content Section B-->
+                                    <!--Content Section 2B-->
                                     <div class="card card-borderless col-4">
                                         <div class="card-body">
-                                            <h5 class="card-title">Card title</h5>
-                                            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                                            <p class="card-text">Some quick example text to build on the card title and
-                                                make up the bulk of the card's content.</p>
-                                            <a href="#" class="card-link">Card link</a>
-                                            <a href="#" class="card-link">Another link</a>
+                                            <!--Callout-->
+                                            <h1 class="card-title text-red text-center">Callout</h1>
+                                            <!--Headline-->
+                                            <h3 class="card-subtitle mb-2 text-muted text-azurite text-center">Headline</h3>
+                                            <hr />
+                                            <!--Source-->
+                                            <p class="card-text font-italic text-black text-center">Source</p>
+                                            <!--Division-->
+                                            <p class="card-text font-italic text-red text-center">Division</p>
                                         </div>
                                     </div>
-                                    <!--Content Section C-->
+                                    <!--Content Section 2C-->
                                     <div class="card card-borderless col-4">
                                         <div class="card-body">
-                                            <h5 class="card-title">Card title</h5>
-                                            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                                            <p class="card-text">Some quick example text to build on the card title and
-                                                make up the bulk of the card's content.</p>
-                                            <a href="#" class="card-link">Card link</a>
-                                            <a href="#" class="card-link">Another link</a>
+                                            <!--Callout-->
+                                            <h1 class="card-title text-red text-center">Callout</h1>
+                                            <!--Headline-->
+                                            <h3 class="card-subtitle mb-2 text-muted text-azurite text-center">Headline</h3>
+                                            <hr />
+                                            <!--Source-->
+                                            <p class="card-text font-italic text-black text-center">Source</p>
+                                            <!--Division-->
+                                            <p class="card-text font-italic text-red text-center">Division</p>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                             <!--Block 2-->
-                             <div class="carousel-item">
+
+                            <!--Block 3-->
+                            <div class="carousel-item">
                                 <div class="row">
-                                    <!--Content Section A-->
+                                    <!--Content Section 3A-->
                                     <div class="card card-borderless col-4">
                                         <div class="card-body">
-                                            <h5 class="card-title">Card title</h5>
-                                            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                                            <p class="card-text">Some quick example text to build on the card title and
-                                                make up the bulk of the card's content.</p>
-                                            <a href="#" class="card-link">Card link</a>
-                                            <a href="#" class="card-link">Another link</a>
+                                            <!--Callout-->
+                                            <h1 class="card-title text-red text-center">Callout</h1>
+                                            <!--Headline-->
+                                            <h3 class="card-subtitle mb-2 text-muted text-azurite text-center">Headline</h3>
+                                            <hr />
+                                            <!--Source-->
+                                            <p class="card-text font-italic text-black text-center">Source</p>
+                                            <!--Division-->
+                                            <p class="card-text font-italic text-red text-center">Division</p>
                                         </div>
                                     </div>
-                                    <!--Content Section B-->
+                                    <!--Content Section 3B-->
                                     <div class="card card-borderless col-4">
                                         <div class="card-body">
-                                            <h5 class="card-title">Card title</h5>
-                                            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                                            <p class="card-text">Some quick example text to build on the card title and
-                                                make up the bulk of the card's content.</p>
-                                            <a href="#" class="card-link">Card link</a>
-                                            <a href="#" class="card-link">Another link</a>
+                                            <!--Callout-->
+                                            <h1 class="card-title text-red text-center">Callout</h1>
+                                            <!--Headline-->
+                                            <h3 class="card-subtitle mb-2 text-muted text-azurite text-center">Headline</h3>
+                                            <hr />
+                                            <!--Source-->
+                                            <p class="card-text font-italic text-black text-center">Source</p>
+                                            <!--Division-->
+                                            <p class="card-text font-italic text-red text-center">Division</p>
                                         </div>
                                     </div>
-                                    <!--Content Section C-->
+                                    <!--Content Section 3C-->
                                     <div class="card card-borderless col-4">
                                         <div class="card-body">
-                                            <h5 class="card-title">Card title</h5>
-                                            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                                            <p class="card-text">Some quick example text to build on the card title and
-                                                make up the bulk of the card's content.</p>
-                                            <a href="#" class="card-link">Card link</a>
-                                            <a href="#" class="card-link">Another link</a>
+                                            <!--Callout-->
+                                            <h1 class="card-title text-red text-center">Callout</h1>
+                                            <!--Headline-->
+                                            <h3 class="card-subtitle mb-2 text-muted text-azurite text-center">Headline</h3>
+                                            <hr />
+                                            <!--Source-->
+                                            <p class="card-text font-italic text-black text-center">Source</p>
+                                            <!--Division-->
+                                            <p class="card-text font-italic text-red text-center">Division</p>
                                         </div>
                                     </div>
                                 </div>
                             </div>
+
                         </div>
                     </div>
                 </div>
