quick links formatting

--- a/index.html
+++ b/index.html
@@ -244,45 +244,83 @@
                         <div class="row">
                             <div class="col-5">
                                 <div class="list-group" id="list-tab" role="tablist">
-                                    <a class="list-group-item list-group-item-action active"
-                                        id="list-socialJustice-list" data-toggle="list" href="#list-socialJustice"
-                                        role="tab" aria-controls="socialJustice">Standing in Solidarity For Social
+                                    <a class="list-group-item list-group-item-action" id="list-socialJustice-list"
+                                        data-toggle="list" href="#list-socialJustice" role="tab"
+                                        aria-controls="socialJustice">Standing in Solidarity For Social
                                         Justice</a>
-                                    <a class="list-group-item list-group-item-action" id="list-arizonaArts-list"
+                                    <a class="list-group-item list-group-item-action active" id="list-arizonaArts-list"
                                         data-toggle="list" href="#list-arizonaArts" role="tab"
-                                        aria-controls="arizonaArts">arizonaArts</a>
+                                        aria-controls="arizonaArts">Arizona Arts</a>
                                     <a class="list-group-item list-group-item-action"
                                         id="list-arizonaArtsInSchools-list" data-toggle="list"
                                         href="#list-arizonaArtsInSchools" role="tab"
-                                        aria-controls="arizonaArtsInSchools">arizonaArtsInSchools</a>
+                                        aria-controls="arizonaArtsInSchools">Arizona Arts in Schools</a>
                                     <a class="list-group-item list-group-item-action" id="list-ccp-list"
-                                        data-toggle="list" href="#list-ccp" role="tab" aria-controls="ccp">ccp</a>
+                                        data-toggle="list" href="#list-ccp" role="tab" aria-controls="ccp">Center for
+                                        Creative Photography</a>
                                     <a class="list-group-item list-group-item-action" id="list-uama-list"
-                                        data-toggle="list" href="#list-uama" role="tab" aria-controls="uama">uama</a>
+                                        data-toggle="list" href="#list-uama" role="tab" aria-controls="uama">UA Museum
+                                        of Art</a>
                                     <a class="list-group-item list-group-item-action" id="list-arizonaArtsLive-list"
                                         data-toggle="list" href="#list-arizonaArtsLive" role="tab"
-                                        aria-controls="arizonaArtsLive">arizonaArtsLive</a>
+                                        aria-controls="arizonaArtsLive">Arizona Arts Live</a>
                                     <a class="list-group-item list-group-item-action" id="list-newsletter-list"
                                         data-toggle="list" href="#list-newsletter" role="tab"
-                                        aria-controls="newsletter">newsletter</a>
+                                        aria-controls="newsletter">Sign Up for Our Newsletter</a>
                                 </div>
                             </div>
                             <!--Content Blocks-->
                             <div class="col-7">
-                                <div class="tab-content" id="nav-tabContent">
-                                    <div class="tab-pane fade show active" id="list-socialJustice" role="tabpanel"
-                                        aria-labelledby="list-socialJustice-list">Arizona Arts stands in solidarity with
+                                <div class="tab-content p-1" id="nav-tabContent">
+                                    <div class="tab-pane fade" id="list-socialJustice" role="tabpanel"
+                                        aria-labelledby="list-socialJustice-list">Arizona Arts stands in
+                                        solidarity with
                                         Black Lives Matter.
-                                        <a class="btn btn-link" target="_blank"
+                                        <a class="btn btn-sm btn-danger" target="_blank"
                                             href="https://cfa.arizona.edu/arizona-arts-stands-in-solidarity-with-black-lives-matter/">Learn
                                             More >></a>
                                     </div>
-                                    <div class="tab-pane fade" id="list-arizonaArts" role="tabpanel"
-                                        aria-labelledby="list-arizonaArts-list">arizonaArts</div>
+                                    <div class="tab-pane fade  show active" id="list-arizonaArts" role="tabpanel"
+                                        aria-labelledby="list-arizonaArts-list">We believe the arts hold the power to
+                                        expand human potential by encouraging us to engage different perspectives and
+                                        cultures. By highlighting Tucson and the University of Arizona as a premier arts
+                                        destination, we seek to expose the world to the boundless talent and creative
+                                        energy fueling Southern Arizona. Only through collaboration among our various
+                                        arts organizations and including all stakeholders can we fully realize our
+                                        creative potential. From this effort comes a more connected community and,
+                                        ultimately, a more meaningful human experience for all.
+                                        <br>
+                                        <a class="btn btn-sm btn-danger" target="_blank"
+                                            href="https://arts.arizona.edu">Learn
+                                            More >></a>
+                                    </div>
                                     <div class="tab-pane fade" id="list-arizonaArtsInSchools" role="tabpanel"
-                                        aria-labelledby="list-arizonaArtsInSchools-list">arizonaArtsInSchools</div>
+                                        aria-labelledby="list-arizonaArtsInSchools-list">Arizona Arts in Schools
+                                        programs are based on a co-teaching and operations model established by Lead
+                                        Guitar, an independent 501(c)3 that works in affiliation with the University of
+                                        Arizona. Lead Guitar and its sister programs–UpBeat (hand drumming), Step Up
+                                        (dance), and Music First (early childhood music)–build sustainable arts programs
+                                        in partnership with public schools and their staff by pairing a master arts
+                                        instructor (often UA graduate students or alumni) with a certified teacher
+                                        already employed by the school. This has the effect of increasing a certified
+                                        teacher’s job security by adding hours to their schedule and new skills to their
+                                        resume.
+                                        <br>
+                                        <a class="btn btn-sm btn-danger" target="_blank"
+                                            href="https://inschools.arts.arizona.edu/">Learn
+                                            More >></a>
+                                    </div>
                                     <div class="tab-pane fade" id="list-ccp" role="tabpanel"
-                                        aria-labelledby="list-ccp-list">ccp</div>
+                                        aria-labelledby="list-ccp-list">The Center for Creative Photography, University
+                                        of Arizona, is recognized as one of the world's finest academic art museums and
+                                        study centers for the history of photography. The Center opened in 1975,
+                                        following a meeting between the University President John Schaefer and Ansel
+                                        Adams.
+                                        <br>
+                                        <a class="btn btn-sm btn-danger" target="_blank"
+                                            href="https://ccp.arizona.edu/">Learn
+                                            More >></a>
+                                    </div>
                                     <div class="tab-pane fade" id="list-uama" role="tabpanel"
                                         aria-labelledby="list-uama-list">uama</div>
                                     <div class="tab-pane fade" id="list-arizonaArtsLive" role="tabpanel"
@@ -321,13 +359,14 @@
                         </div>
                     </div>
                     <div class="col-6 no-gutters">
-                        <h3 class="float-right">News and Spotlights</h3>
+                        <h3 class="">News & Spotlights</h3>
                         <div class="card card-borderless bg-black float-right">
-                            <iframe
-                                src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Ffacebook&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
-                                width="340" height="500" style="border:none;overflow:hidden" scrolling="no"
-                                frameborder="0" allowfullscreen="true"
-                                allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+                            <span><iframe
+                                    src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Ffacebook&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
+                                    width="225" height="400" style="border:none;overflow:hidden" scrolling="no"
+                                    frameborder="0" allowfullscreen="true"
+                                    allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+
                         </div>
                     </div>
                 </div>
