--- a/index.html
+++ b/index.html
@@ -149,27 +149,26 @@
                         <div class="card-body">
                             <h3 class="text-uppercase">School of Art</h3>
                             <div class="card-text">
-                                <p class="mb-0">The School of Art offers its students a dynamic arrangement of in-depth
-                                    programs of study in:
-
-                                    ART HISTORY | ART & VISUAL CULTURE EDUCATION | STUDIO ART.</p>
-                                <button type="button" class="btn btn-link">Learn More</button>
-
+                                <p>The School of Art offers its students a dynamic arrangement of in-depth
+                                    programs of study in: ART HISTORY | ART & VISUAL CULTURE EDUCATION | STUDIO ART.</p>
+                                <button type="button" class="btn btn-link">Learn More >></button>
                             </div>
-                        </div>
                         <div
                             class="card-body landing-btn-container d-flex flex-column justify-content-end align-items-start">
                             <div class="btn-group" role="group" aria-label="Basic example">
                                 <button type="button" class="btn btn-link">Apply</button>
                                 <button type="button" class="btn btn-link">Application Deadlines</button>
-                                <button type="button" class="btn btn-link">Portfolio Requirements</button>
+                                <button type="button" class="btn btn-link">Art Advising</button>
                             </div>
                             <div class="btn-group" role="group" aria-label="Basic example">
                                 <button type="button" class="btn btn-link">Visit</button>
+                                <button type="button" class="btn btn-link">Portfolio Requirements</button>
                                 <button type="button" class="btn btn-link">Graduate Studies</button>
-                                <button type="button" class="btn btn-link">Art Advising</button>
+
                             </div>
                         </div>
+                    </div>
+
                     </div>
 
                     <!--Dance-->
@@ -177,16 +176,24 @@
                         <div class="card-body">
                             <h3 class="text-uppercase">School of Dance</h3>
                             <div class="card-text">
-                                <p class="mb-0">You are a transfer student if you have attended other
-                                    colleges/universities and
-                                    have completed 12 or more units since graduating from high school. In this example,
-                                    there is
-                                    an external link class to demonstrate that option.</p>
+                                <p>The School of Dance offers a triple-track BFA degree program of study in ballet,
+                                    modern, & jazz dance, with equal emphasis in these areas.</p>
+                                <button type="button" class="btn btn-link">Learn More >></button>
+                            </div>
+                            <div
+                            class="card-body landing-btn-container d-flex flex-column justify-content-end align-items-start">
+                            <div class="btn-group" role="group" aria-label="Basic example">
+                                <button type="button" class="btn btn-link">Apply</button>
+                                <button type="button" class="btn btn-link">Application Deadlines</button>
+                                <button type="button" class="btn btn-link">Dance Advising</button>
+                            </div>
+                            <div class="btn-group" role="group" aria-label="Basic example">
+                                <button type="button" class="btn btn-link">Visit</button>
+                                <button type="button" class="btn btn-link">Audition Requirements</button>
+                                <button type="button" class="btn btn-link">Graduate Studies</button>
+
                             </div>
                         </div>
-                        <div
-                            class="card-body landing-btn-container d-flex flex-column justify-content-end align-items-start">
-                            <a href="#">How to Apply</a>
                         </div>
                     </div>
 
@@ -276,6 +283,7 @@
                                         aria-labelledby="list-socialJustice-list">Arizona Arts stands in
                                         solidarity with
                                         Black Lives Matter.
+                                        <br>
                                         <a class="btn btn-sm btn-danger" target="_blank"
                                             href="https://cfa.arizona.edu/arizona-arts-stands-in-solidarity-with-black-lives-matter/">Learn
                                             More >></a>
@@ -405,9 +413,9 @@
                                             <!--Callout-->
                                             <h1 class="card-title text-red text-center"># 1</h1>
                                             <!--Headline-->
-                                            <h4 class="card-subtitle mb-2 text-muted text-azurite text-center">UA's Fred
-                                                Fox School of Music ranked #1 in 2017 of 10 Best Hidden Gem Music
-                                                Schools.
+                                            <h4 class="card-subtitle mb-2 text-muted text-azurite text-center">Fred
+                                                Fox School of Music #1 out of 10 Best Hidden Gem Music
+                                                Schools in 2017
                                             </h4>
                                             <hr />
                                             <!--Source-->
@@ -424,8 +432,8 @@
                                             <!--Callout-->
                                             <h1 class="card-title text-red text-center">Top 50</h1>
                                             <!--Headline-->
-                                            <h4 class="card-subtitle mb-2 text-muted text-azurite text-center">The UA
-                                                ranks #30 among US public institutions</h4>
+                                            <h4 class="card-subtitle mb-2 text-muted text-azurite text-center">UA
+                                                ranks #30 among US public colleges</h4>
                                             <hr />
                                             <!--Source-->
                                             <p class="card-text font-italic text-black text-center">U.S News and World
