school info tiles and links

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                         <div class="card-body">
                             <h3 class="text-uppercase">School of Dance</h3>
                             <div class="card-text">
-                                <p>The School of Dance offers a triple-track BFA degree program of study in ballet,
+                                <p>The School of Dance provides a triple-track BFA degree program of study in ballet,
                                     modern, & jazz dance, with equal emphasis in these areas.</p>
                                 <button type="button" class="btn btn-link">Learn More >></button>
                             </div>
@@ -191,7 +191,6 @@
                                 <button type="button" class="btn btn-link">Visit</button>
                                 <button type="button" class="btn btn-link">Audition Requirements</button>
                                 <button type="button" class="btn btn-link">Graduate Studies</button>
-
                             </div>
                         </div>
                         </div>
@@ -205,17 +204,24 @@
                     <!--Music-->
                     <div class="card card-landing-grid landing-chili">
                         <div class="card-body">
-                            <h3 class="text-uppercase">Fred Fox School of Music</h3>
+                            <h3 class="text-uppercase">Fred Fox of Music</h3>
                             <div class="card-text">
-                                <p class="mb-0">You are an incoming freshman if you will soon graduate from high school,
-                                    you
-                                    have graduated, or you have a GED and have not enrolled in college since graduating.
-                                </p>
+                                <p>The Fred Fox School of Music educates musicians as composers, educators, performers, and scholars to build meaningful lives in the arts. </p>
+                                <button type="button" class="btn btn-link">Learn More >></button>
+                            </div>
+                            <div
+                            class="card-body landing-btn-container d-flex flex-column justify-content-end align-items-start">
+                            <div class="btn-group" role="group" aria-label="Basic example">
+                                <button type="button" class="btn btn-link">Apply</button>
+                                <button type="button" class="btn btn-link">Application Deadlines</button>
+                                <button type="button" class="btn btn-link">Dance Advising</button>
+                            </div>
+                            <div class="btn-group" role="group" aria-label="Basic example">
+                                <button type="button" class="btn btn-link">Visit</button>
+                                <button type="button" class="btn btn-link">Audition Requirements</button>
+                                <button type="button" class="btn btn-link">Graduate Studies</button>
                             </div>
                         </div>
-                        <div
-                            class="card-body landing-btn-container d-flex flex-column justify-content-end align-items-start">
-                            <a href="#">How to Apply</a>
                         </div>
                     </div>
                     <!--Theatre, Film & Television-->
@@ -223,16 +229,22 @@
                         <div class="card-body">
                             <h3 class="text-uppercase">School of Theatre, Film & Television</h3>
                             <div class="card-text">
-                                <p class="mb-0">You are a transfer student if you have attended other
-                                    colleges/universities and
-                                    have completed 12 or more units since graduating from high school. In this example,
-                                    there is
-                                    an external link class to demonstrate that option.</p>
+                                <p class="mb-0">We offer comprehensive training in the art and business of storytelling, offered through live theatre and the immersive cinematic experience, for careers in the industry, the arts, and higher education.</p>
+                                <button type="button" class="btn btn-link">Learn More >></button>
+                            </div>
+                            <div
+                            class="card-body landing-btn-container d-flex flex-column justify-content-end align-items-start">
+                            <div class="btn-group" role="group" aria-label="Basic example">
+                                <button type="button" class="btn btn-link">Apply</button>
+                                <button type="button" class="btn btn-link">Application Deadlines</button>
+                                <button type="button" class="btn btn-link">Dance Advising</button>
+                            </div>
+                            <div class="btn-group" role="group" aria-label="Basic example">
+                                <button type="button" class="btn btn-link">Visit</button>
+                                <button type="button" class="btn btn-link">Audition Requirements</button>
+                                <button type="button" class="btn btn-link">Graduate Studies</button>
                             </div>
                         </div>
-                        <div
-                            class="card-body landing-btn-container d-flex flex-column justify-content-end align-items-start">
-                            <a href="#">How to Apply</a>
                         </div>
                     </div>
 
