school links updates

--- a/index.html
+++ b/index.html
@@ -138,21 +138,24 @@
         <br />
 
         <!--School Content and Links-->
-
         <div class="container-fluid mt-1">
             <div class="row-md-12">
+                
                 <!--Row 1-->
                 <div class="card-deck">
 
                     <!--Art-->
                     <div class="card card-landing-grid landing-chili">
                         <div class="card-body">
+                            <!--Heading-->
                             <h3 class="text-uppercase">School of Art</h3>
+                            <!--Description-->
                             <div class="card-text">
                                 <p>The School of Art offers its students a dynamic arrangement of in-depth
                                     programs of study in: ART HISTORY | ART & VISUAL CULTURE EDUCATION | STUDIO ART.</p>
                                 <button type="button" class="btn btn-link">Learn More >></button>
                             </div>
+                            <!--Links-->
                             <div
                                 class="card-body landing-btn-container d-flex flex-column justify-content-end align-items-start">
                                 <div class="btn-group" role="group" aria-label="Basic example">
@@ -164,22 +167,27 @@
                                     <button type="button" class="btn btn-link">Visit</button>
                                     <button type="button" class="btn btn-link">Portfolio Requirements</button>
                                     <button type="button" class="btn btn-link">Graduate Studies</button>
-
                                 </div>
                             </div>
-                        </div>
 
+                        </div>
                     </div>
 
                     <!--Dance-->
                     <div class="card card-landing-grid landing-chili">
                         <div class="card-body">
+
+                            <!--Heading-->
                             <h3 class="text-uppercase">School of Dance</h3>
+
+                            <!--Description-->
                             <div class="card-text">
                                 <p>The School of Dance provides a triple-track BFA degree program of study in ballet,
                                     modern, & jazz dance, with equal emphasis in these areas.</p>
                                 <button type="button" class="btn btn-link">Learn More >></button>
                             </div>
+
+                            <!--Links-->
                             <div
                                 class="card-body landing-btn-container d-flex flex-column justify-content-end align-items-start">
                                 <div class="btn-group" role="group" aria-label="Basic example">
@@ -193,6 +201,7 @@
                                     <button type="button" class="btn btn-link">Graduate Studies</button>
                                 </div>
                             </div>
+
                         </div>
                     </div>
 
@@ -205,12 +214,18 @@
                     <!--Music-->
                     <div class="card card-landing-grid landing-chili">
                         <div class="card-body">
+
+                            <!--Heading-->
                             <h3 class="text-uppercase">Fred Fox of Music</h3>
+
+                            <!--Description-->
                             <div class="card-text">
                                 <p>The Fred Fox School of Music educates musicians as composers, educators, performers,
                                     and scholars to build meaningful lives in the arts. </p>
                                 <button type="button" class="btn btn-link">Learn More >></button>
                             </div>
+
+                            <!--Links-->
                             <div
                                 class="card-body landing-btn-container d-flex flex-column justify-content-end align-items-start">
                                 <div class="btn-group" role="group" aria-label="Basic example">
@@ -224,18 +239,26 @@
                                     <button type="button" class="btn btn-link">Graduate Studies</button>
                                 </div>
                             </div>
+
                         </div>
                     </div>
+
                     <!--Theatre, Film & Television-->
                     <div class="card card-landing-grid landing-chili">
                         <div class="card-body">
+
+                            <!--Heading-->
                             <h3 class="text-uppercase">School of Theatre, Film & Television</h3>
+
+                            <!--Description-->
                             <div class="card-text">
                                 <p class="mb-0">We offer comprehensive training in the art and business of storytelling,
                                     offered through live theatre and the immersive cinematic experience, for careers in
                                     the industry, the arts, and higher education.</p>
                                 <button type="button" class="btn btn-link">Learn More >></button>
                             </div>
+
+                            <!--Links-->
                             <div
                                 class="card-body landing-btn-container d-flex flex-column justify-content-end align-items-start">
                                 <div class="btn-group" role="group" aria-label="Basic example">
@@ -249,6 +272,7 @@
                                     <button type="button" class="btn btn-link">Graduate Studies</button>
                                 </div>
                             </div>
+
                         </div>
                     </div>
 
