--- a/index.html
+++ b/index.html
@@ -140,27 +140,66 @@
         <!--School Content and Links-->
         <div class="container-fluid mt-1">
             <div class="row-md-12">
-                
+
                 <!--Row 1-->
                 <div class="card-deck">
 
                     <!--Art-->
                     <div class="card card-landing-grid landing-chili">
                         <div class="card-body">
+
                             <!--Heading-->
                             <h3 class="text-uppercase">School of Art</h3>
+
                             <!--Description-->
                             <div class="card-text">
                                 <p>The School of Art offers its students a dynamic arrangement of in-depth
                                     programs of study in: ART HISTORY | ART & VISUAL CULTURE EDUCATION | STUDIO ART.</p>
                                 <button type="button" class="btn btn-link">Learn More >></button>
                             </div>
+
                             <!--Links-->
                             <div
                                 class="card-body landing-btn-container d-flex flex-column justify-content-end align-items-start">
                                 <div class="btn-group" role="group" aria-label="Basic example">
                                     <button type="button" class="btn btn-link">Apply</button>
-                                    <button type="button" class="btn btn-link">Application Deadlines</button>
+
+                                    <!-- Art Deadlines Modal trigger button (data-target, id (x2), & aria-labelledby need to be same (e.g., "#{school}DeadlinesModal") ) -->
+                                    <button type="button" class="btn btn-link" data-toggle="modal"
+                                        data-target="#artDeadlinesModal">Application Deadlines</button>
+
+                                    <!-- Begin Art Deadlines Modal content -->
+                                    <div id="artDeadlinesModal" class="modal fade bd-example-modal-xl" tabindex="-1"
+                                        role="dialog" aria-labelledby="artDeadlinesModal" aria-hidden="true">
+
+                                        <!--Modal Content Wrapper-->
+                                        <div class="modal-dialog modal-xl">
+                                            <div class="modal-content">
+
+                                                <!--Modal Heading-->
+                                                <div class="modal-header">
+
+                                                    <!--Modal Title-->
+                                                    <h5 class="modal-title" id="artDeadlinesModal">{School} Deadlines
+                                                    </h5>
+
+                                                    <!--Close Modal button-->
+                                                    <button type="button" class="close" data-dismiss="modal"
+                                                        aria-label="Close">
+                                                        <span aria-hidden="true">&times;</span>
+                                                    </button>
+                                                </div>
+
+                                                <!--Content Here-->
+                                                <div>
+                                                    <p>Art placeholder</p>
+                                                </div>
+
+                                            </div>
+                                        </div>
+
+                                    </div>
+
                                     <button type="button" class="btn btn-link">Art Advising</button>
                                 </div>
                                 <div class="btn-group" role="group" aria-label="Basic example">
@@ -192,7 +231,43 @@
                                 class="card-body landing-btn-container d-flex flex-column justify-content-end align-items-start">
                                 <div class="btn-group" role="group" aria-label="Basic example">
                                     <button type="button" class="btn btn-link">Apply</button>
-                                    <button type="button" class="btn btn-link">Application Deadlines</button>
+
+                                    <!-- Dance Deadlines Modal trigger button (data-target, id (x2), & aria-labelledby need to be same (e.g., "#{school}DeadlinesModal") ) -->
+                                    <button type="button" class="btn btn-link" data-toggle="modal"
+                                        data-target="#danceDeadlinesModal">Application Deadlines</button>
+
+                                    <!-- Begin Dance Deadlines Modal content -->
+                                    <div id="danceDeadlinesModal" class="modal fade bd-example-modal-xl" tabindex="-1"
+                                        role="dialog" aria-labelledby="danceDeadlinesModal" aria-hidden="true">
+
+                                        <!--Modal Content Wrapper-->
+                                        <div class="modal-dialog modal-xl">
+                                            <div class="modal-content">
+
+                                                <!--Modal Heading-->
+                                                <div class="modal-header">
+
+                                                    <!--Modal Title-->
+                                                    <h5 class="modal-title" id="danceDeadlinesModal">{School} Deadlines
+                                                    </h5>
+
+                                                    <!--Close Modal button-->
+                                                    <button type="button" class="close" data-dismiss="modal"
+                                                        aria-label="Close">
+                                                        <span aria-hidden="true">&times;</span>
+                                                    </button>
+                                                </div>
+
+                                                <!--Content Here-->
+                                                <div>
+                                                    <p>Dance placeholder</p>
+                                                </div>
+
+                                            </div>
+                                        </div>
+
+                                    </div>
+
                                     <button type="button" class="btn btn-link">Dance Advising</button>
                                 </div>
                                 <div class="btn-group" role="group" aria-label="Basic example">
