Art & Dance deadlines modals

--- a/index.html
+++ b/index.html
@@ -305,7 +305,43 @@
                                 class="card-body landing-btn-container d-flex flex-column justify-content-end align-items-start">
                                 <div class="btn-group" role="group" aria-label="Basic example">
                                     <button type="button" class="btn btn-link">Apply</button>
-                                    <button type="button" class="btn btn-link">Application Deadlines</button>
+
+                                    <!-- Music Deadlines Modal trigger button (data-target, id (x2), & aria-labelledby need to be same (e.g., "#{school}DeadlinesModal") ) -->
+                                    <button type="button" class="btn btn-link" data-toggle="modal"
+                                        data-target="#musicDeadlinesModal">Application Deadlines</button>
+
+                                    <!-- Music Dance Deadlines Modal content -->
+                                    <div id="musicDeadlinesModal" class="modal fade bd-example-modal-xl" tabindex="-1"
+                                        role="dialog" aria-labelledby="musicDeadlinesModal" aria-hidden="true">
+
+                                        <!--Modal Content Wrapper-->
+                                        <div class="modal-dialog modal-xl">
+                                            <div class="modal-content">
+
+                                                <!--Modal Heading-->
+                                                <div class="modal-header">
+
+                                                    <!--Modal Title-->
+                                                    <h5 class="modal-title" id="musicDeadlinesModal">{School} Deadlines
+                                                    </h5>
+
+                                                    <!--Close Modal button-->
+                                                    <button type="button" class="close" data-dismiss="modal"
+                                                        aria-label="Close">
+                                                        <span aria-hidden="true">&times;</span>
+                                                    </button>
+                                                </div>
+
+                                                <!--Content Here-->
+                                                <div>
+                                                    <p>Music placeholder</p>
+                                                </div>
+
+                                            </div>
+                                        </div>
+
+                                    </div>
+
                                     <button type="button" class="btn btn-link">Music Advising</button>
                                 </div>
                                 <div class="btn-group" role="group" aria-label="Basic example">
@@ -338,7 +374,43 @@
                                 class="card-body landing-btn-container d-flex flex-column justify-content-end align-items-start">
                                 <div class="btn-group" role="group" aria-label="Basic example">
                                     <button type="button" class="btn btn-link">Apply</button>
-                                    <button type="button" class="btn btn-link">Application Deadlines</button>
+
+                                    <!-- TFTV Deadlines Modal trigger button (data-target, id (x2), & aria-labelledby need to be same (e.g., "#{school}DeadlinesModal") ) -->
+                                    <button type="button" class="btn btn-link" data-toggle="modal"
+                                        data-target="#tftvDeadlinesModal">Application Deadlines</button>
+
+                                    <!-- TFTV Dance Deadlines Modal content -->
+                                    <div id="tftvDeadlinesModal" class="modal fade bd-example-modal-xl" tabindex="-1"
+                                        role="dialog" aria-labelledby="tftvDeadlinesModal" aria-hidden="true">
+
+                                        <!--Modal Content Wrapper-->
+                                        <div class="modal-dialog modal-xl">
+                                            <div class="modal-content">
+
+                                                <!--Modal Heading-->
+                                                <div class="modal-header">
+
+                                                    <!--Modal Title-->
+                                                    <h5 class="modal-title" id="tftvDeadlinesModal">{School} Deadlines
+                                                    </h5>
+
+                                                    <!--Close Modal button-->
+                                                    <button type="button" class="close" data-dismiss="modal"
+                                                        aria-label="Close">
+                                                        <span aria-hidden="true">&times;</span>
+                                                    </button>
+                                                </div>
+
+                                                <!--Content Here-->
+                                                <div>
+                                                    <p>TFTV placeholder</p>
+                                                </div>
+
+                                            </div>
+                                        </div>
+
+                                    </div>
+
                                     <button type="button" class="btn btn-link">TFTV Advising</button>
                                 </div>
                                 <div class="btn-group" role="group" aria-label="Basic example">
