--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                                                 <div class="modal-header">
 
                                                     <!--Modal Title-->
-                                                    <h5 class="modal-title" id="artDeadlinesModal">{School} Deadlines
+                                                    <h5 class="modal-title" id="artDeadlinesModal">School of Art Deadlines
                                                     </h5>
 
                                                     <!--Close Modal button-->
@@ -192,7 +192,42 @@
 
                                                 <!--Content Here-->
                                                 <div>
-                                                    <p>Art placeholder</p>
+                                                    <table class="table table-hover">
+                                                        <thead>
+                                                          <tr>
+                                                            <th scope="col">Degree</th>
+                                                            <th scope="col">First Year</th>
+                                                            <th scope="col">Transfer</th>
+                                                            <th scope="col">Notes</th>
+                                                          </tr>
+                                                        </thead>
+                                                        <tbody>
+                                                          <tr>
+                                                            <th scope="row">Art History (BA)</th>
+                                                            <td>June 1, 2022</td>
+                                                            <td>June 1, 2022</td>
+                                                            <td>deadline extended from 5/1</td>
+                                                          </tr>
+                                                          <tr>
+                                                            <th scope="row">Art & Visual Culture Education (BFA)</th>
+                                                            <td>June 1, 2022</td>
+                                                            <td>June 1, 2022</td>
+                                                            <td>deadline extended from 5/1</td>
+                                                          </tr>
+                                                          <tr>
+                                                            <th scope="row">Studio Art (BA)</th>
+                                                            <td>June 1, 2022</td>
+                                                            <td>June 1, 2022</td>
+                                                            <td>deadline extended from 5/1</td>
+                                                          </tr>
+                                                          <tr>
+                                                            <th scope="row">Studio Art (BFA)</th>
+                                                            <td>June 1, 2022</td>
+                                                            <td>June 1, 2022</td>
+                                                            <td>deadline extended from 5/1</td>
+                                                          </tr>
+                                                        </tbody>
+                                                      </table>
                                                 </div>
 
                                             </div>
